--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,25 @@ html, body {
 canvas {
   display: block;
 }
+
+.resetBtn {
+	background:linear-gradient(to bottom, #eecea3 5%, #ef629f 100%);
+	background-color:#eecea3;
+	border-radius:39px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #dbdbdb;
+}
+.resetBtn:hover {
+	background:linear-gradient(to bottom, #ef629f 5%, #eecea3 100%);
+	background-color:#ef629f;
+}
+.resetBtn:active {
+	position:relative;
+	top:1px;
+}
